# dice-roller

./: .gitignore  README.md  cli_dice.py  dice.py  pyproject.toml  table_helper.py
.github/workflows/: release.yml
